--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "bootstrap": "lerna bootstrap && lerna exec npm install",
     "build": "lerna run build",
-    "test": "jest",
-    "docs": "typedoc --plugin nlfurniss-typedoc-plugin-sourcefile-url --plugin typedoc-plugin-extras --sourcefile-url-prefix 'https://github.com/spruceid/siwe' --favicon ./favicon.svg --out docs packages/siwe/lib/siwe.ts"
+    "test": "jest"
   },
   "author": "Spruce Systems Inc.",
   "license": "Apache-2.0",
